# wildlife_vision

./: CMakeLists.txt
build_mp/: CMakeCache.txt
conv_net/: CMakeLists.txt  conv_nn.cxx  vision_nn.cxx
data_generator/: dataset_generator.py
feature_detection/: CMakeLists.txt  surf_flann.cxx  surf_test.cxx
image_parser/: confirm.py  create_thumbnails.py  csv.py  instance.py  locations.py  matchbox.py  observations.py  recalculate.py  requirements.txt
image_parser/image_parser/: __init__.py  confirm.py  create_thumbnails.py  csv.py  instance.py  locations.py  matchbox.py  observations.py  recalculate.py
image_tools/: CMakeLists.txt  create_training_data.cxx  image_resizer.cxx  image_splitter.cxx  visualize_conv_net.cxx
jxl_parser/: LD_BP_and_PR_Zoomed_Out_12June2015_Flt1a.jxl  jxlcorrector.py  jxlparser.py  jxlparser.sql  jxlparser_database.vsdx  jxlparser_srs.docx  jxlparser_structure.py  jxlstructure.docx  requirements.txt  structure.docx  structure.txt  test.csv  ~$$jxlparser_database.~vsdx  ~$lparser_srs.docx
jxl_parser/image_splitter/: image_splitter.py  image_splitter.sql  mosaic_adder.py  mosaic_splitter.py  mosaic_splitter_wand.py  nohup.out  requirements.txt
other/: CMakeLists.txt  canny_edge.cxx  color_histogram_line.cxx  dynamic_time_warping.cxx  dynamic_time_warping.hxx  spiral_histogram.cxx
picker_website/: package.json
picker_website/public/javascripts/: map.js
picker_website/public/stylesheets/: style.css
picker_website/views/: index.jade  layout.jade
